--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,6 @@ theme: butterfly
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/331126135/blog-mds.github.io.git
+  branch: master
